test: Unit tests for Invoice Service module
Signed-off-by: Marek Forys <mforys73@gmail.com>